--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,25 +10,31 @@
 
       <tr *ngFor="let line of game.getPiecesList()">
         <td *ngFor="let piece of line">
-          <input type="text" value="{{piece.value}}">
+          <input type="text" [(ngModel)]="piece.value">
         </td>
       </tr>
 
     </tbody>
   </table>
 
-  <button (click)="this.game.board.movePiece(direction.Up)">up</button>
-  <button (click)="this.game.board.movePiece(direction.Down)">down</button>
+  <button style="margin-left: 1cm" (click)="this.game.board.movePiece(direction.Up)">up</button><br>
   <button (click)="this.game.board.movePiece(direction.Left)">left</button>
-  <button (click)="this.game.board.movePiece(direction.Right)">right</button>
-  <button (click)="this.game.board.randomizeBoard(100)">random</button>
-  <button (click)="isCleared = this.game.board.isCleared()">isCleared</button>
+  <button style="margin-left: 0.9cm" (click)="this.game.board.movePiece(direction.Right)">right</button><br>
+  <button style="margin-left: 0.8cm" (click)="this.game.board.movePiece(direction.Down)">down</button>
+
+  <br><br>
+
+  <button (click)="this.game.board.randomizeBoard(nbRandomize)">randomize</button>
+  <input type="text" [(ngModel)]="nbRandomize">
+
+  <!--<button (click)="isCleared = this.game.board.isCleared()">isCleared</button>
   <button (click)="checkMove = this.game.board.checkMove()">checkMove</button>
   <p>is cleared : {{isCleared}}</p>
-  <p>possible moves : {{checkMove}}</p>
+  <p>possible moves : {{checkMove}}</p>-->
 
-
-  <button (click)="nbMove = this.game.clearPuzzle()">checkMove</button>
-  <p>number of moves : {{nbMove}}</p>
+  <br><br>
+  <button (click)="nbMove = this.game.clearPuzzleWithSeenBoard()">Solve</button>
+  <p>number of states explored : {{nbMove[0]}}</p>
+  <p>list of moves : {{nbMove[1]}}</p>
 
 </div>
